Makefile changed to adapt to stm32_startup.s

--- a/libs/Makefile
+++ b/libs/Makefile
@@ -1,24 +1,33 @@
 # libs Makefile
 include ../Makefile.common
-LIBS+=libstm32.a
+LIBS= libstm32.a libstartup.a
 CFLAGSlib+=-c
 
-all: libstm32.a
+all: $(LIBS)
 
 libstm32.a:
 	@echo "  Building $@ ..."
-	@cd $(LIBDIR)/CMSIS/DeviceSupport/ST/STM32F10x && \
-		$(CC) $(CFLAGSlib) \
-			system_stm32f10x.c
 	@cd $(LIBDIR)/STM32F10x_StdPeriph_Driver/src && \
 		$(CC) $(CFLAGSlib) \
 			-D"assert_param(expr)=((void)0)" \
 			*.c
 	@echo "    Linking..."
 	@$(AR) cr $(LIBDIR)/$@ \
-		$(LIBDIR)/CMSIS/DeviceSupport/ST/STM32F10x/system_stm32f10x.o \
 		$(LIBDIR)/STM32F10x_StdPeriph_Driver/src/*.o
 	@echo "    Built $@ successfully."
+
+libstartup.a:
+	@echo "   Building $@..."
+	@cd $(LIBDIR)/CMSIS/DeviceSupport/ST/STM32F10x && \
+		$(CC) $(CFLAGSlib) \
+			system_stm32f10x.c
+	@cd $(LIBDIR)/CMSIS/DeviceSupport/ST/STM32F10x/startup/gcc_ride7 && \
+		$(CC) $(CFLAGSlib) \
+			startup_stm32f10x_md.s
+	@$(AR) cr $(LIBDIR)/$@ \
+		$(LIBDIR)/CMSIS/DeviceSupport/ST/STM32F10x/system_stm32f10x.o \
+		$(LIBDIR)/CMSIS/DeviceSupport/ST/STM32F10x/startup/gcc_ride7/startup_stm32f10x_md.o
+	@echo "  Finished $@"
 .PHONY: libs clean tshow
 
 clean:
