build elf using stm32_flash.ld

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,14 +2,9 @@
 
 include ../Makefile.common
 
-#OBJS+=startup.o
-OBJS+=main.o
-
-all: app.a
-
-app.a: $(OBJS)
-		$(AR) cr app.a $(OBJS)
-.PHONY: src clean tshow
+all: 
+	$(CC) -c *.c $(CFLAGS)
+.PHONY: clean tshow
 
 clean:
 		rm -f app.a $(OBJS)
