build executable files for md and hd devices

--- a/libs/Makefile
+++ b/libs/Makefile
@@ -1,9 +1,10 @@
 # libs Makefile
 include ../Makefile.common
-LIBS= libstm32.a libstartup.a
 CFLAGSlib+=-c
 
-all: $(LIBS)
+libs_md: libstm32.a libstartup_md.a
+
+libs_hd: libstm32.a libstartup_hd.a
 
 libstm32.a:
 	@echo "  Building $@ ..."
@@ -16,8 +17,8 @@ libstm32.a:
 		$(LIBDIR)/STM32F10x_StdPeriph_Driver/src/*.o
 	@echo "    Built $@ successfully."
 
-libstartup.a:
-	@echo "   Building $@..."
+libstartup_md.a:
+	@echo "    Building $@..."
 	@cd $(LIBDIR)/CMSIS/DeviceSupport/ST/STM32F10x && \
 		$(CC) $(CFLAGSlib) \
 			system_stm32f10x.c
@@ -27,14 +28,24 @@ libstartup.a:
 	@$(AR) cr $(LIBDIR)/$@ \
 		$(LIBDIR)/CMSIS/DeviceSupport/ST/STM32F10x/system_stm32f10x.o \
 		$(LIBDIR)/CMSIS/DeviceSupport/ST/STM32F10x/startup/gcc_ride7/startup_stm32f10x_md.o
-	@echo "  Finished $@"
+	@echo "   Finished $@"
+
+libstartup_hd.a:
+	@echo "    Building $@..."
+	@cd $(LIBDIR)/CMSIS/DeviceSupport/ST/STM32F10x && \
+		$(CC) $(CFLAGSlib) \
+			system_stm32f10x.c
+	@cd $(LIBDIR)/CMSIS/DeviceSupport/ST/STM32F10x/startup/gcc_ride7 && \
+		$(CC) $(CFLAGSlib) \
+			startup_stm32f10x_hd.s
+	@$(AR) cr $(LIBDIR)/$@ \
+		$(LIBDIR)/CMSIS/DeviceSupport/ST/STM32F10x/system_stm32f10x.o \
+		$(LIBDIR)/CMSIS/DeviceSupport/ST/STM32F10x/startup/gcc_ride7/startup_stm32f10x_hd.o
+	@echo "   Finished $@"
+
 .PHONY: libs clean tshow
 
 clean:
 	rm -f $(LIBDIR)/CMSIS/DeviceSupport/ST/STM32F10x/system_stm32f10x.o
 	rm -f $(LIBDIR)/STM32F10x_StdPeriph_Driver/src/*.o
-	rm -f $(LIBS)
-tshow:
-	@echo "######################################################################################################"
-	@echo "################# optimize settings: $(InfoTextLib), $(InfoTextSrc)"
-	@echo "######################################################################################################"
+	-rm -f libstm32.a libstartup_hd.a libstartup_md.a
